# mlp-genetic-Project_CI

./: CMakeLists.txt
include/: dataset.h  ga.h  mlp.h  results.h  utils.h
src/: dataset.cc  ga.cc  main.cpp  mlp.cc  results.cc  utils.cc
